<:wrench:> correction of alignment in inscription button. Fixture on naming in element of header

--- a/css/style_reservia.css
+++ b/css/style_reservia.css
@@ -55,13 +55,15 @@ header input{
   color: #0065FC;
   font-size: 1em;
   font-weight: bold;
-  padding: 1.5em 1.75em;
+  height: 1.5em;
+  padding: 1.7em 1.75em;
 }
 
 .nav-btn1 {
   border-top: solid 0.2em #0065FC;
   color: #0065FC;
   font-size: 1em;
+  height: 1.5em;
   padding: 1.5em 1.75em;
 }
 
@@ -69,6 +71,7 @@ header input{
   border-top: solid 0.2em transparent;
   color: #000;
   font-size: 1em;
+  height: 1.5em;
   padding: 1.5em 1.75em;
 }
 
@@ -194,7 +197,7 @@ h1{
   transition: 700ms ease;
 }
 
-.mini_icon{
+.mini-icon{
   background-color: #FFF;
   border: 0.1em solid #F2F2F2;
   border-radius: 50%;
@@ -204,8 +207,8 @@ h1{
   padding: 0.5em 0.8em 0.3em 0.9em;
 }
 
-/* Main content style*/
-.box2{
+/***** Main content *****/
+#box2{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
